fix(dropdown): update background color variable for dark mode

--- a/packages/core/src/components/dropdown/dropdown.scss
+++ b/packages/core/src/components/dropdown/dropdown.scss
@@ -177,6 +177,7 @@
     overflow-y: auto;
     transform: scaleY(0);
     pointer-events: none;
+    background-color: var(--tds-dropdown-bg);
     @include tds-scrollbar;
 
     &.lg {
